# chlaty-lib-hianime

./: .gitignore  Cargo.toml  LICENSE  README.md  clean_artifact.sh  download_artifact.sh  manifes.json
.github/workflows/: android-build.yml  linux-build.yml  macos-build.yml  windows-build.yml
src/: free_ptr.rs  get_episode.rs  get_episode_list.rs  get_episode_server.rs  get_server.rs  lib.rs  search.rs  test.rs
