[package]
name = "chlaty-lib-hianime"
version = "0.1.5"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3 
lto = true 
strip = true
codegen-units = 1

[dependencies]
regex = "1.11.2"
reqwest = {version = "0.12.23", default-features = false, features = ["rustls-tls", "blocking", "json"]}
serde = "1.0.219"
serde_json = "1.0.143"
tracing = "0.1.41"
url = "2.5.7"
urlencoding = "2.1.3"
visdom = "1.0.3"
